fixe bug on safari

--- a/assets/style.css
+++ b/assets/style.css
@@ -509,7 +509,6 @@ body {
 }
 .main .main__menu .main__menu__commande .main__menu__commande__article .main__menu__commande__article__main:hover + .main__menu__commande__article__aside, .main .main__menu .main__menu__commande .main__menu__commande__article .main__menu__commande__article__main:active + .main__menu__commande__article__aside {
   margin-right: 0;
-  -webkit-margin-collapse: 0;
 }
 .main .main__menu .main__menu__commande .main__menu__commande__article .main__menu__commande__article__aside {
   background-color: #99e2d0;
@@ -518,8 +517,10 @@ body {
   flex-direction: column;
   justify-content: center;
   margin-right: -46px;
-  transition: margin-right 300ms ease-in-out;
-  -webkit-transition: margin-right 300ms ease-in-out;
+  -webkit-transition: margin 300ms ease-in-out;
+  -moz-transition: margin 300ms ease-in-out;
+  -o-transition: margin 300ms ease-in-out;
+  transition: margin 300ms ease-in-out;
 }
 .main .main__menu .main__menu__commande .main__menu__commande__article .main__menu__commande__article__aside i {
   color: white;
